@@ -1,13 +1,13 @@
 @echo off
 
 set XDAG_VERSION="${project.version}"
-set XDAG_JARNAME="xdagj-%XDAG_VERSION%-shaded.jar"
+set XDAG_JARNAME="xdagj-%XDAG_VERSION%-executable.jar"
 set XDAG_OPTS="-t"
 
 #set JAVA_HOME="C:\Program Files\Java\jdk"
 
 # default JVM options
-set JAVA_OPTS="--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -server -Xms4g -Xmx4g"
+set JAVA_OPTS="--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -Xms4g -Xmx4g -XX:+ExitOnOutOfMemoryError -XX:+UseZGC"
 
 set JAVA_HEAPDUMP="-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./logs/xdag-heapdump"
 
