@@ -3,7 +3,7 @@
 ulimit -n unlimited
 
 XDAG_VERSION="${project.version}"
-XDAG_JARNAME="xdagj-${XDAG_VERSION}-shaded.jar"
+XDAG_JARNAME="xdagj-${XDAG_VERSION}-executable.jar"
 XDAG_OPTS="-t"
 
 # Linux Java Home
@@ -13,7 +13,7 @@ XDAG_OPTS="-t"
 #JAVA_HOME=/usr/local/opt/openjdk/libexec/openjdk.jdk/Contents/Home/
 
 # default JVM options
-JAVA_OPTS="--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -server -Xms4g -Xmx4g"
+JAVA_OPTS="--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -Xms4g -Xmx4g -XX:+ExitOnOutOfMemoryError -XX:+UseZGC"
 
 JAVA_HEAPDUMP="-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./logs/xdag-heapdump"
 
